--- a/style.css
+++ b/style.css
@@ -225,6 +225,53 @@ nav ul {
 }
 
 
+/* My Info section */
+.my-info{
+    height: 45vw;
+    display: flex;
+}
+
+.my-info .heading{
+    margin: 0;
+    width: 50%;
+    height: 100%;
+    text-align: left;
+    font-size: 9vw;
+    padding: 6vw 0 0 5vw;
+
+}
+
+.my-info .details{
+    width: 50%;
+    margin: 5vw 9vw 5vw 6vw; 
+    padding: 3vw;  
+    border-radius: 50px;
+    background-image: linear-gradient(145deg, #11151b, #464b52);
+    box-shadow: 11px 11px 22px #141414, -11px -11px 22px #525252;
+}
+
+.my-info ul{
+    margin-left: 0;
+    padding-left: 0;
+}
+
+.my-info li{
+    padding: 1.4vw;
+    list-style: none;
+    font-size: 2vw;
+    line-height: 3vw;
+    font-weight: 700;
+    margin: 1vw 0;
+    border-radius: 1vw;
+    transition: all 0.5s ease-in;
+}
+
+.my-info li:hover{
+    color: #4f4e4e;
+    border-radius: 1vw;
+    box-shadow: 36vw 0 0 0 #ffffffbd inset, -36vw 0 0 0 #ffffffbd inset;
+}
+
 
 /* Connection section */
 
@@ -244,11 +291,10 @@ nav ul {
 }
 
 .connect .links {
-    width: 50%;
-    height: 89%;
+    width: 44%;
+    height: 87%;
     font-size: 4vw;
-    margin: 1vw;
-    margin-right: 4vw;
+    margin: 2vw 3vw 8vw 6vw;
     padding: 4vw 4vw;
     border-radius: 50px;
     background-image: linear-gradient(145deg, #11151b, #464b52);
