--- a/style.css
+++ b/style.css
@@ -226,16 +226,16 @@ nav ul {
 
 
 /* My Info section */
-.my-info{
+.my-info {
     height: 45vw;
     display: flex;
 }
 
-#mobile-info-heading{
+#mobile-info-heading {
     display: none;
 }
 
-.my-info .heading{
+.my-info .heading {
     margin: 0;
     width: 50%;
     height: 100%;
@@ -245,21 +245,21 @@ nav ul {
 
 }
 
-.my-info .details{
+.my-info .details {
     width: 44%;
-    margin: 5vw 9vw 5vw 6vw; 
-    padding: 3vw;  
+    margin: 5vw 9vw 5vw 6vw;
+    padding: 3vw;
     border-radius: 3vw;
     background-image: linear-gradient(145deg, #11151b, #464b52);
     box-shadow: 1vw 1vw 1.5vw #141414, -1vw -1vw 1.5vw #525252;
 }
 
-.my-info ul{
+.my-info ul {
     margin-left: 0;
     padding-left: 0;
 }
 
-.my-info li{
+.my-info li {
     padding: 1.4vw;
     list-style: none;
     font-size: 2vw;
@@ -267,16 +267,16 @@ nav ul {
     font-weight: 700;
     margin: 1vw 0;
     border-radius: 1vw;
-    transition: all 0.5s ease-in;
+    transition: color, border-radius, box-shadow 1s ease-in;
 }
 
-.my-info li:hover{
+.my-info li:hover {
     color: #4f4e4e;
     border-radius: 1vw;
     box-shadow: 100vw 0 0 0 #ffffffbd inset, -100vw 0 0 0 #ffffffbd inset;
 }
 
-#mobile-details{
+#mobile-details {
     display: none;
 }
 
@@ -328,6 +328,6 @@ nav ul {
     color: white;
 }
 
-#mobile-connect-heading{
+#mobile-connect-heading {
     display: none;
 }
